# proc-macro-workshop

builder/: Cargo.toml
builder/src/: lib.rs  main.rs
debug/: Cargo.toml
debug/src/: lib.rs  main.rs
seq/: Cargo.toml
seq/src/: lib.rs  main.rs
